[package]
name = "reqstatic"
version = "0.1.0"
authors = ["sumibi-yakitori <nekosoft360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# blocking = []


[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
